feat: Integrate Open Sans font and update WelcomeScreen layout for improved styling

--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "favicon": "./assets/Logo.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
