--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@expo-google-fonts/open-sans": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-picker/picker": "2.11.1",
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-file-system": "^19.0.20",
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.9",
     "expo-linear-gradient": "^15.0.8",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@types/react": "~19.1.10",
     "babel-preset-expo": "^54.0.7",
+    "expo-module-scripts": "^5.0.8",
     "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.9.2"
   }
