--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.27",
     "expo-constants": "~18.0.11",
+    "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.20",
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.9",
