--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@react-native-picker/picker": "2.11.1",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
-    "expo": "~54.0.27",
-    "expo-constants": "~18.0.11",
+    "expo": "~54.0.29",
+    "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
-    "expo-file-system": "^19.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
-    "expo-image-picker": "~17.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
-    "expo-router": "~6.0.17",
+    "expo-router": "~6.0.19",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
